adding recent projects and updated resume to portfolio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       <div class="col s10 m3 l1">
       <h1 class="white-text name">Philip Cowan</h1>
       </div>
-
       <div class="col s5 m3 push-m3 l2 push-l6">
         <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
           <img class="githubicon" src="assets/images/githubicon.png" alt="Github icon"></a>
@@ -52,7 +51,7 @@
     </li>
     <li><a class="waves-effect" href="#projects"><i class="material-icons">work</i>Projects</a></li>
     <li><a class="waves-effect" target="_blank"
-        href="https://docs.google.com/document/d/1bMZOuBeTNz5tIoqBX3f2B9g0fsoChusGvkwpPAjH31w/edit?usp=sharing"><i
+        href="./assets/images/Philip_Cowan_Resume.pdf"><i
           class="material-icons">format_align_left
         </i>Resume</a></li>
     <li>
@@ -84,18 +83,18 @@
 
           <!-- <div class="bio"> -->
           <div class="col s12 m7 l8">
-            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer with a background in music and the service industry.  Looking forward to working on a team to make an awesome product to solve any number of real life problems.
-            Currently enrolled in the University of Arizona’s Full Stack developer
-            certificate program, to finish in May 2020. 
+            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer with a background in the customer service/restaurant industry.
+              Always willing to work hard and do research to learn more to get past obstacles.  Not afraid to ask for help, and love to help others when able.
+            Completed the University of Arizona’s Full Stack developer
+            certificate program in May 2020. 
                </p>
             <!-- </div> -->
           </div>
         </div>
         <div class="row">
           <div class="col s12">
-            <h2 class="white-text">Skills</h2>
-          </div><div class="col s12 white-text bio"><p>HTML, CSS, Materialize, Bootstrap, Javascript, Jquery, NodeJS, Firebase, MySQL, Express, AJAX, API,
-            and learning more every week!
+            <h3 class="white-text">Skills</h3>
+          </div><div class="col s12 white-text bio"><p>HTML, CSS, Materialize, Bootstrap, Javascript, Jquery, React, Mongo, NodeJS, Firebase, MySQL, Express, AJAX, API
           </p></div>
         </div>
       </div>
@@ -111,7 +110,40 @@
   <div class="section black" id="projects">
     <div class="row container">
       <h2 class="header white-text text-darken-3 lighten-3">Projects</h2>
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg" alt="Library Stacks">
+              <span class="card-title">MERN Library</span>
+            </div>
+            <div class="card-content">
+              <p>This is a full stack app that uses the google books api to display results after searching by title.  The user can save books to a mongo database and view them on a 'saved' page.</p>
+            </div>
+            <div class="card-action">
+              <a class="black-text" target="_blank" href="https://librarymern.herokuapp.com/">Deployment</a>
+              <a class="black-text" target="_blank" href="https://github.com/phil4lif/mern-library">Github Repo</a>
+            </div>
+          </div>
+        </div>
 
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/images/dogmemory.jpg" alt="App Screenshot">
+              <span class="card-title">Good Boy Memory Click</span>
+            </div>
+            <div class="card-content">
+              <p>A react memory game, try to click each good boy only once, an exercise in React State</p><br>
+            </div>
+            <div class="card-action">
+              <a target="_blank" href="https://phil4lif.github.io/clicky/" class="black-text">Deployment</a>
+              <a target="_blank" href="https://github.com/phil4lif/clicky" class="black-text">Github Repo</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
         <div class="col s12 m6">
           <div class="card">
@@ -172,7 +204,7 @@
               <span class="card-title">Node LIRI Bot</span>
             </div>
             <div class="card-content">
-              <p>This is a Node.JS application that allows the user to input one of four commands with a term, and the
+              <p>This is a Node app that allows the user to input one of four commands with a term, and the
                 app returns information from one of 3 api's based on the request.</p><br>
             </div>
             <div class="card-action">
@@ -208,7 +240,7 @@
               <span class="card-title">Animal Gifs</span>
             </div>
             <div class="card-content">
-              <p>A simple app that allows a user to query the giphy api, to display results, start and stop the
+              <p>Allows a user to query the giphy api, to display results, start and stop the
                 animation with a click, and save favorites. I built this with html, css, javascript, jquery, ajax, and
                 used local storage.</p><br>
             </div>
