--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="picandbio">
         <div class="row">
           <div class="col s12 m5 l4">
-            <img src="assets/images/me.jpg" alt="Phil Cowan" class="me">
+            <img src="assets/images/headshot.jpg" alt="Phil Cowan" class="me">
           </div>
 
 
