made parallax containers taller

--- a/index.html
+++ b/index.html
@@ -83,19 +83,13 @@
 
           <!-- <div class="bio"> -->
           <div class="col s12 m7 l8">
-            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer with a background in the customer service/restaurant industry.
-              Always willing to work hard and do research to learn more to get past obstacles.  Not afraid to ask for help, and love to help others when able.
-            Completed the University of Arizona’s Full Stack developer
-            certificate program in May 2020. 
-               </p>
+            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer looking to utilize the technologies I’ve learned by joining a development team. Experienced in HTML, CSS (and various frameworks), Javascript, JQuery, Node, Express, React, Mongo, MySQL, and Git.  
             <!-- </div> -->
           </div>
         </div>
         <div class="row">
           <div class="col s12">
-            <h3 class="white-text">Skills</h3>
-          </div><div class="col s12 white-text bio"><p>HTML, CSS, Materialize, Bootstrap, Javascript, Jquery, React, Mongo, NodeJS, Firebase, MySQL, Express, AJAX, API
-          </p></div>
+          </div>
         </div>
       </div>
     </div>
@@ -281,8 +275,6 @@
     <div class="row container">
       <div class="row">
         <div class="col s12">
-          <h2 class="header white-text text-darken-3 lighten-3">"Never for money, always for love"<br> -David Byrne</h2>
-        </div>
       </div>
     </div>
   </div>
