--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </li>
     <li><a class="waves-effect" href="#projects"><i class="material-icons">work</i>Projects</a></li>
     <li><a class="waves-effect" target="_blank"
-        href="./assets/images/PhilipCowanResume.pdf"><i
+        href="./assets/images/Philip_Cowan_resume_7.29.20.pdf"><i
           class="material-icons">format_align_left
         </i>Resume</a></li>
     <li>
