--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 
           <!-- <div class="bio"> -->
           <div class="col s12 m7 l8">
-            <p class=" bio white-text text-darken-3 lighten-3">A full stack developer looking to utilize the technologies I’ve learned by joining a development team. Experienced in HTML, CSS (and various frameworks), Javascript, JQuery, Node, Express, React, Mongo, MySQL, and Git.  
+            <p class=" bio white-text text-darken-3 lighten-3"> I am a full stack engineer, proficient in JavaScript, React, React Native, Node.js, Express, MySQL, MongoDB, Heroku, Materialize, jQuery, HTML5, CSS3, Git.  I have light exposure to GraphQL, AWS (EC2, S3, Elastic Beanstalk, ), Next.js, Firebase, D3.js, Material-UI, GridFS.
+              <br><br>
+              I am currently developing a mobile app that has something to do with food trucks and connecting them with people that want to eat!  I will let you know when it is live!  
+              <br><br>
+              I spend my spare time with my girlfriend and our dogs on a trail or at home.  I also like to play bass, guitar, and piano.
             <!-- </div> -->
           </div>
         </div>
