--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
       </div>
       <div class="col s10 m3 l1">
-      <h1 class="white-text name">Philip Cowan</h1>
+        <h1 class="white-text name">Philip Cowan</h1>
       </div>
       <div class="col s5 m3 push-m3 l2 push-l6">
         <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
@@ -50,8 +50,7 @@
       </div>
     </li>
     <li><a class="waves-effect" href="#projects"><i class="material-icons">work</i>Projects</a></li>
-    <li><a class="waves-effect" target="_blank"
-        href="./assets/images/Philip_Cowan_resume_7.29.20.pdf"><i
+    <li><a class="waves-effect" target="_blank" href="./assets/images/Philip_Cowan_resume_7.29.20.pdf"><i
           class="material-icons">format_align_left
         </i>Resume</a></li>
     <li>
@@ -83,16 +82,17 @@
 
           <!-- <div class="bio"> -->
           <div class="col s12 m7 l8">
-            <p class=" bio white-text text-darken-3 lighten-3"> I am a full stack engineer, proficient in JavaScript, React, React Native, Node.js, Express, MySQL, MongoDB, Heroku, Materialize, jQuery, HTML5, CSS3, Git.  I have light exposure to GraphQL, AWS (EC2, S3, Elastic Beanstalk, ), Next.js, Firebase, D3.js, Material-UI, GridFS.
+            <p class=" bio white-text text-darken-3 lighten-3"> I am a full stack engineer, proficient in JavaScript,
+              React, React Native, Node.js, Express, MySQL, MongoDB, Heroku, Materialize, jQuery, HTML5, CSS3, Git. I
+              have light exposure to GraphQL, AWS (EC2, S3, Elastic Beanstalk, ), Next.js, Firebase, D3.js, Material-UI,
+              GridFS.
               <br><br>
-              I am currently developing a mobile app that has something to do with food trucks and connecting them with people that want to eat!  I will let you know when it is live!  
+              I am currently developing a mobile app that has something to do with food trucks and connecting them with
+              people that want to eat! I will let you know when it is live!
               <br><br>
-              I spend my spare time with my girlfriend and our dogs on a trail or at home.  I also like to play bass, guitar, and piano.
-            <!-- </div> -->
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
+              I spend my spare time with my girlfriend and our dogs on a trail or at home. I also like to play bass,
+              guitar, and piano.
+              <!-- </div> -->
           </div>
         </div>
       </div>
@@ -102,6 +102,41 @@
   <div class="parallax-container">
     <div class="parallax">
       <img src="assets/images/phoenix_skyline.JPG">
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="carousel carousel-slider center">
+      <div class="carousel-item white-text" href="#one!">
+        <h2>Reading List</h2>
+        <div class="card">
+          <div class="card-image">
+            <img src="assets/images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg" alt="Library Stacks">
+            <span class="card-title">MERN Library</span>
+          </div>
+          <div class="card-content">
+            <p>This is a full stack app that uses the google books api to display results after searching by title.
+              The user can save books to a mongo database and view them on a 'saved' page.</p>
+          </div>
+          <div class="card-action">
+            <a class="white-text" target="_blank" href="https://librarymern.herokuapp.com/">Deployment</a>
+            <a class="white-text" target="_blank" href="https://github.com/phil4lif/mern-library">Github Repo</a>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item amber white-text" href="#two!">
+        <h2>Second Panel</h2>
+        <p class="white-text">This is your second panel</p>
+      </div>
+      <div class="carousel-item green white-text" href="#three!">
+        <h2>Third Panel</h2>
+        <p class="white-text">This is your third panel</p>
+      </div>
+      <div class="carousel-item blue white-text" href="#four!">
+        <h2>Fourth Panel</h2>
+        <p class="white-text">This is your fourth panel</p>
+      </div>
     </div>
   </div>
 
@@ -116,7 +151,8 @@
               <span class="card-title">MERN Library</span>
             </div>
             <div class="card-content">
-              <p>This is a full stack app that uses the google books api to display results after searching by title.  The user can save books to a mongo database and view them on a 'saved' page.</p>
+              <p>This is a full stack app that uses the google books api to display results after searching by title.
+                The user can save books to a mongo database and view them on a 'saved' page.</p>
             </div>
             <div class="card-action">
               <a class="black-text" target="_blank" href="https://librarymern.herokuapp.com/">Deployment</a>
@@ -150,7 +186,8 @@
               <span class="card-title">Friend Finder app</span>
             </div>
             <div class="card-content">
-              <p>This app takes a survey of a user to match them with another user based on similarities of responses. It was made with node and express.</p><br>
+              <p>This app takes a survey of a user to match them with another user based on similarities of responses.
+                It was made with node and express.</p><br>
             </div>
             <div class="card-action">
               <a class="black-text" target="_blank" href="https://find-a-friend-bootcamp.herokuapp.com/">Deployment</a>
@@ -166,7 +203,8 @@
               <span class="card-title">Burger!</span>
             </div>
             <div class="card-content">
-              <p>An app that allows a user to add a burger to the database, eat it, and delete it. Built with handlebars, express, mySQL</p><br>
+              <p>An app that allows a user to add a burger to the database, eat it, and delete it. Built with
+                handlebars, express, mySQL</p><br>
             </div>
             <div class="card-action">
               <a class="black-text" target="_blank" href="https://boiling-dawn-49572.herokuapp.com/">Deployment</a>
@@ -258,7 +296,7 @@
           <div class="card">
             <div class="card-image">
               <img src="assets/images/bamazoncust.png" alt="Bamazon Screenshot"">
-              <span class="card-title">Bamazon Store</span>
+              <span class=" card-title">Bamazon Store</span>
             </div>
             <div class="card-content">
               <p>A command line storefront written with NodeJS, MySQL, and inquirer to prompt the user. </p>
@@ -279,22 +317,25 @@
     <div class="row container">
       <div class="row">
         <div class="col s12">
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- jquery link -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.parallax').parallax();
-      $('.sidenav').sidenav();
-      $('.scrollspy').scrollSpy();
-    });
+    <!-- jquery link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('.parallax').parallax();
+        $('.sidenav').sidenav();
+        $('.scrollspy').scrollSpy();
+        $('.carousel.carousel-slider').carousel({
+          indicators: true
+        });
+      });
 
-  </script>
+    </script>
 </body>
 
 </html>
