mern library in carousel

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
           <!-- <div class="bio"> -->
           <div class="col s12 m7 l8">
             <p class=" bio white-text text-darken-3 lighten-3"> I am a full stack engineer, proficient in JavaScript,
-              React, React Native, Node.js, Express, MySQL, MongoDB, Heroku, Materialize, jQuery, HTML5, CSS3, Git. I
-              have light exposure to GraphQL, AWS (EC2, S3, Elastic Beanstalk, ), Next.js, Firebase, D3.js, Material-UI,
+              React, React Native, Node.js, Express, MySQL, MongoDB, Heroku, Materialize, jQuery, HTML5, CSS3, Git. Also
+              exposure to php, TypeScript, GraphQL, AWS (EC2, S3, Elastic Beanstalk, ), Next.js, Firebase, D3.js,
+              Material-UI,
               GridFS.
               <br><br>
               I am currently developing a mobile app that has something to do with food trucks and connecting them with
@@ -99,11 +100,11 @@
     </div>
   </div>
   <!-- second image -->
-  <div class="parallax-container">
+  <!-- <div class="parallax-container">
     <div class="parallax">
       <img src="assets/images/phoenix_skyline.JPG">
     </div>
-  </div>
+  </div> -->
 
 
   <div class="container">
@@ -125,14 +126,20 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item amber white-text" href="#two!">
-        <h2>Second Panel</h2>
-        <p class="white-text">This is your second panel</p>
+
+      <div class="carousel-item white-text" id="project2" href="#two!">
+        <h2>React Reading List</h2>
+        <span>
+          <a class="white-text" target="_blank" href="https://librarymern.herokuapp.com/">Live</a> |
+          <a class="white-text" target="_blank" href="https://github.com/phil4lif/mern-library">Github Repo</a>
+        </span>
       </div>
+
       <div class="carousel-item green white-text" href="#three!">
         <h2>Third Panel</h2>
         <p class="white-text">This is your third panel</p>
       </div>
+
       <div class="carousel-item blue white-text" href="#four!">
         <h2>Fourth Panel</h2>
         <p class="white-text">This is your fourth panel</p>
