adds food truck photo to carousel

--- a/index.html
+++ b/index.html
@@ -109,22 +109,9 @@
 
   <div class="container">
     <div class="carousel carousel-slider center">
-      <div class="carousel-item white-text" href="#one!">
-        <h2>Reading List</h2>
-        <div class="card">
-          <div class="card-image">
-            <img src="assets/images/valentin-rechitean-elFPAMiuxOo-unsplash.jpg" alt="Library Stacks">
-            <span class="card-title">MERN Library</span>
-          </div>
-          <div class="card-content">
-            <p>This is a full stack app that uses the google books api to display results after searching by title.
-              The user can save books to a mongo database and view them on a 'saved' page.</p>
-          </div>
-          <div class="card-action">
-            <a class="white-text" target="_blank" href="https://librarymern.herokuapp.com/">Deployment</a>
-            <a class="white-text" target="_blank" href="https://github.com/phil4lif/mern-library">Github Repo</a>
-          </div>
-        </div>
+      <div class="carousel-item white-text" id="project1" href="#one!">
+        <h2>Food Truck Network</h2>
+
       </div>
 
       <div class="carousel-item white-text" id="project2" href="#two!">
