4 done on the carousel

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
 
   <!-- top image  -->
-  <div class="parallax-container">
+  <!-- <div class="parallax-container">
     <div class="parallax"><img src="assets/images/ilya-pavlov-OqtafYT5kTw-unsplash.jpg"></div>
-  </div>
+  </div> -->
 
   <div id="bio" class="section black">
     <div class="row container">
@@ -123,14 +123,20 @@
         </span>
       </div>
 
-      <div class="carousel-item green white-text" href="#three!">
-        <h2>Third Panel</h2>
-        <p class="white-text">This is your third panel</p>
+      <div class="carousel-item white-text" id="project3" href="#three!">
+        <h2>Burger CRUD</h2>
+        <span>
+          <a class="white-text" target="_blank" href="https://boiling-dawn-49572.herokuapp.com/">Live</a> |
+          <a class="white-text" target="_blank" href="https://github.com/phil4lif/burger">Repo</a>
+        </span>
       </div>
 
-      <div class="carousel-item blue white-text" href="#four!">
-        <h2>Fourth Panel</h2>
-        <p class="white-text">This is your fourth panel</p>
+      <div class="carousel-item white-text" id="project4" href="#four!">
+        <h2>React Memory Game</h2>
+        <span>
+          <a class="white-text" target="_blank" href="https://phil4lif.github.io/clicky/">Live</a> |
+          <a class="white-text" target="_blank" href="https://github.com/clicky/">Repo</a>
+        </span>
       </div>
     </div>
   </div>
@@ -278,7 +284,6 @@
             <div class="card-action">
               <a href="https://phil4lif.github.io/giftastic/" target="_blank" class="black-text">Deployment</a>
               <a class="black-text" target="_blank" href="https://github.com/phil4lif/giftastic">Github Repo</a>
-
             </div>
           </div>
         </div>
