--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="Full Stack Engineer, Developer, Full Stack, Front End">
   <!-- Compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <title>Philip Cowan</title>
+  <title>Philip Cowan - Full Stack Engineer</title>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
         </a>
       </div>
       <div class="col s10 m3 l1">
-        <h1 class="white-text name">Philip Cowan</h1>
+        <h1 class="white-text name">Phil Cowan</h1>
       </div>
       <div class="col s5 m3 push-m3 l2 push-l6">
         <a class="githubicon" href="https://github.com/phil4lif" target="_blank">
@@ -74,7 +75,7 @@
       </div>
       <div class="picandbio">
         <div class="row">
-          <div class="col s12 m5 l4" >
+          <div class="col s12 m5 l4">
             <img src="assets/images/headshot.jpg" id="headshot" alt="Phil Cowan">
           </div>
 
@@ -104,38 +105,92 @@
     </div>
   </div> -->
 
+
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
+  <div id="modal2" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
+  <div id="modal3" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
+  <div id="modal4" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
+
   <div class="section black" id="projects">
     <div class="container">
       <h2 class="header white-text text-darken-3 lighten-3">Projects</h2>
       <div class="carousel carousel-slider center">
         <div class="carousel-item white-text" id="project1" href="#one!">
-          <h2>Food Truck Network</h2>
-          <span><a class="white-text" href="https://github.com/phil4lif/FoodTruck" target="_blank">Repo</a></span>
-  
+          <span class="ptext pheading">Food Truck Network</span>
+          <br>
+          <span class="ptext"><a class="white-text" href="https://github.com/phil4lif/FoodTruck"
+              target="_blank">Repo</a> | <a class="modal-trigger white-text" href="#modal1">Details</a> </span>
+          <br>
+          <!-- Modal Trigger -->
+
+
         </div>
-  
+
         <div class="carousel-item white-text" id="project2" href="#two!">
-          <h2>React Reading List</h2>
-          <span>
+          <span class="ptext pheading">React Reading List</span>
+          <br>
+          <span class="ptext">
             <a class="white-text" target="_blank" href="https://librarymern.herokuapp.com/">Live</a> |
-            <a class="white-text" target="_blank" href="https://github.com/phil4lif/mern-library">Repo</a>
+            <a class="white-text" target="_blank" href="https://github.com/phil4lif/mern-library">Repo</a> | <a
+              class="modal-trigger white-text" href="#modal2">Details</a>
           </span>
+          <br>
         </div>
-  
+
         <div class="carousel-item white-text" id="project3" href="#three!">
-          <h2>Burger CRUD</h2>
-          <span>
+          <span class="ptext pheading">Burger CRUD</span>
+          <br>
+          <span class="ptext">
             <a class="white-text" target="_blank" href="https://boiling-dawn-49572.herokuapp.com/">Live</a> |
-            <a class="white-text" target="_blank" href="https://github.com/phil4lif/burger">Repo</a>
+            <a class="white-text" target="_blank" href="https://github.com/phil4lif/burger">Repo</a> | <a
+              class="modal-trigger white-text" href="#modal3">Details</a>
           </span>
+          <br>
         </div>
-  
+
         <div class="carousel-item white-text" id="project4" href="#four!">
-          <h2>React Memory Game</h2>
-          <span>
+          <span class="ptext pheading">React Memory Game</span>
+          <br>
+          <span class="ptext">
             <a class="white-text" target="_blank" href="https://phil4lif.github.io/clicky/">Live</a> |
-            <a class="white-text" target="_blank" href="https://github.com/clicky/">Repo</a>
+            <a class="white-text" target="_blank" href="https://github.com/clicky/">Repo</a> | <a
+              class="modal-trigger white-text" href="#modal4">Details</a>
           </span>
+          <br>
         </div>
       </div>
     </div>
@@ -305,7 +360,7 @@
       </div>
 
     </div> -->
-  </div> 
+  </div>
   <!-- <div class="parallax-container">
     <div class="parallax"><img src="assets/images/sambglarge.jpg"></div>
   </div> -->
@@ -324,6 +379,7 @@
     <script>
       $(document).ready(function () {
         $('.materialboxed').materialbox();
+        $('.modal').modal();
         $('.parallax').parallax();
         $('.sidenav').sidenav();
         $('.scrollspy').scrollSpy();
@@ -335,4 +391,5 @@
 
     </script>
 </body>
+
 </html>
