adds content to the four details modals

--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <h4>Food Truck Network</h4>
+      <p>Mobile application intended to capture the makret of 25,000+ food trucks nationwide.  I've built this with React-Native, Mongo, Express, and Node.js.
+      </p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
@@ -119,8 +120,8 @@
   </div>
   <div id="modal2" class="modal">
     <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <h4>React Reading List</h4>
+      <p>This web application uses Google Books API to search, and display books.  Then the books can be saved.  I built this for practice building MERN stack applications.</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
@@ -128,8 +129,8 @@
   </div>
   <div id="modal3" class="modal">
     <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <h4>Burger CRUD</h4>
+      <p>I made this to practice CRUD operations in a MySQL database.  I also learned how to use handlebars as the view engine for this application.</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
@@ -137,8 +138,8 @@
   </div>
   <div id="modal4" class="modal">
     <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
+      <h4>React Memory Game</h4>
+      <p>This is a simple game where the player must click each photo only once.  I made this to learn about using class components for state management in react.</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
