--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div id="modal1" class="modal">
     <div class="modal-content">
       <h4>Food Truck Network</h4>
-      <p>Mobile application intended to capture the makret of 25,000+ food trucks nationwide.  I've built this with React-Native, Mongo, Express, and Node.js.
+      <p>Mobile application intended to capture the market of 25,000+ food trucks nationwide.  I've built this with React-Native, Mongo, Express, and Node.js.
       </p>
     </div>
     <div class="modal-footer">
