--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </li>
     <li><a class="waves-effect" href="#projects"><i class="material-icons">work</i>Projects</a></li>
-    <li><a class="waves-effect" target="_blank" href="./assets/images/Philip_Cowan_resume_7.29.20.pdf"><i
+    <li><a class="waves-effect" target="_blank" href="./assets/images/Philip_Cowan_resume_9_7_2020.pdf"><i
           class="material-icons">format_align_left
         </i>Resume</a></li>
     <li>
