adds another project to the carousel

--- a/index.html
+++ b/index.html
@@ -139,7 +139,18 @@
   <div id="modal4" class="modal">
     <div class="modal-content">
       <h4>React Memory Game</h4>
-      <p>This is a simple game where the player must click each photo only once.  I made this to learn about using class components for state management in react.</p>
+      <p>This is a memory game where the player must click each photo only once.  I made this to learn about using class components for state management in react.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
+  <div id="modal5" class="modal">
+    <div class="modal-content">
+      <h4>Command Line Store</h4>
+      <p>I made this with Node, mySQL and inquirer.  A command line application that uses
+        inquirer to prompt the users for input.
+      </p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
@@ -193,8 +204,20 @@
           </span>
           <br>
         </div>
+        <div class="carousel-item white-text" id="project5" href="#five!">
+          <span class="ptext pheading">Command Line Store</span>
+          <br>
+          <span class="ptext">
+            <!-- <a class="white-text" target="_blank" href="">Live</a> | -->
+            <a class="white-text" target="_blank" href="https://github.com/phil4lif/bamazon">Repo</a> | <a
+              class="modal-trigger white-text" href="#modal5">Details</a>
+          </span>
+          <br>
+        </div>
       </div>
     </div>
+  </div>
+</div>
     <!-- <div class="row container">
       <div class="row">
         <div class="col s12 m6">
