update resume and bio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </li>
     <li><a class="waves-effect" href="#projects"><i class="material-icons">work</i>Projects</a></li>
-    <li><a class="waves-effect" target="_blank" href="./assets/images/Philip_Cowan_resume_9_7_2020.pdf"><i
+    <li><a class="waves-effect" target="_blank" href="./assets/Philip-Cowan-Resume.pdf"><i
           class="material-icons">format_align_left
         </i>Resume</a></li>
     <li>
@@ -87,11 +87,9 @@
               Material-UI,
               GridFS.
               <br><br>
-              I am currently developing a mobile app that has something to do with food trucks and connecting them with
-              people that want to eat! I will let you know when it is live!
+              I am a Teaching Assistant and Tutor at Trilogy Education Coding Boot Camps, and I am a mobile developer at Sunami LLC.
               <br><br>
-              I spend my spare time with my girlfriend and our dogs on a trail or at home. I also like to play bass,
-              guitar, and piano.
+              I spend my spare time volunteering at the Arizona Animal Welfare League, where I walk and play with dogs that are waiting to be adopted.  My other spare time is spent with my own dogs on a trail or at home. I also like to play bass and guitar.
               <!-- </div> -->
           </div>
         </div>
