add parallax photo back in and update resume

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="black section myheader">
+  <div class="myheader">
     <!-- <div class="row container"> -->
     <div class="row">
       <div class="col s2 m1">
@@ -51,7 +51,7 @@
       </div>
     </li>
     <li><a class="waves-effect" href="#projects"><i class="material-icons">work</i>Projects</a></li>
-    <li><a class="waves-effect" target="_blank" href="./assets/Philip-Cowan-Resume.pdf"><i
+    <li><a class="waves-effect" target="_blank" href="./assets/PhilCowanResume2021.pdf"><i
           class="material-icons">format_align_left
         </i>Resume</a></li>
     <li>
@@ -63,9 +63,11 @@
 
 
   <!-- top image  -->
-  <!-- <div class="parallax-container">
-    <div class="parallax"><img src="assets/images/ilya-pavlov-OqtafYT5kTw-unsplash.jpg"></div>
-  </div> -->
+  <div class="parallax-container">
+    <div class="parallax">
+      <img src="assets/images/philandlinkandnavi.jpg">
+    </div>
+  </div>
 
   <div id="bio" class="section black">
     <div class="row container">
@@ -97,11 +99,12 @@
     </div>
   </div>
   <!-- second image -->
-  <!-- <div class="parallax-container">
+  <div class="parallax-container">
     <div class="parallax">
-      <img src="assets/images/phoenix_skyline.JPG">
+      <img src="assets/images/ilya-pavlov-OqtafYT5kTw-unsplash.jpg">
     </div>
-  </div> -->
+  </div>
+
 
 
 
